# cloud-settings

./: README.md
clash/: config.yaml
jetbrains/CLion/: CMakeLists.txt  readme.md
jetbrains/background/: readme.md
vscode/background/: readme.md
vscode/scripts/: open_with_code.reg
